--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
          <body class="landing"></body>
             <nav> <!-- navigation bar -->
             <nav class="navbar"> <!-- nav bar -->
-                <img src="styles/assets/images/bloc_jams_logo.png" alt="bloc jams logo" class="logo">
+                <a href="index.html" class="logo">
+                    <img src="styles/assets/images/bloc_jams_logo.png" alt="bloc jams logo">
+                </a>
+                <div class="links-container">
+                    <a href="collection.html" class="navbar-link">collection</a>
+                </div>
                 </nav>
          </nav>
          <section class="hero-content">
